Display a subscribe button for public memos
