# proto/gen/openapi.yaml
@@ -624,18 +624,26 @@ paths:
             parameters:
                 - name: pageSize
                   in: query
-                  description: "Optional. The maximum number of memos to return.\r\n The service may return fewer than this value.\r\n If unspecified, at most 50 memos will be returned.\r\n The maximum value is 1000; values above 1000 will be coerced to 1000."
+                  description: |-
+                    Optional. The maximum number of memos to return.
+                     The service may return fewer than this value.
+                     If unspecified, at most 50 memos will be returned.
+                     The maximum value is 1000; values above 1000 will be coerced to 1000.
                   schema:
                     type: integer
                     format: int32
                 - name: pageToken
                   in: query
-                  description: "Optional. A page token, received from a previous `ListMemos` call.\r\n Provide this to retrieve the subsequent page."
+                  description: |-
+                    Optional. A page token, received from a previous `ListMemos` call.
+                     Provide this to retrieve the subsequent page.
                   schema:
                     type: string
                 - name: state
                   in: query
-                  description: "Optional. The state of the memos to list.\r\n Default to `NORMAL`. Set to `ARCHIVED` to list archived memos."
+                  description: |-
+                    Optional. The state of the memos to list.
+                     Default to `NORMAL`. Set to `ARCHIVED` to list archived memos.
                   schema:
                     enum:
                         - STATE_UNSPECIFIED
@@ -645,12 +653,18 @@ paths:
                     format: enum
                 - name: orderBy
                   in: query
-                  description: "Optional. The order to sort results by.\r\n Default to \"display_time desc\".\r\n Example: \"display_time desc\" or \"create_time asc\""
+                  description: |-
+                    Optional. The order to sort results by.
+                     Default to "display_time desc".
+                     Example: "display_time desc" or "create_time asc"
                   schema:
                     type: string
                 - name: filter
                   in: query
-                  description: "Optional. Filter to apply to the list results.\r\n Filter is a CEL expression to filter memos.\r\n Refer to `Shortcut.filter`."
+                  description: |-
+                    Optional. Filter to apply to the list results.
+                     Filter is a CEL expression to filter memos.
+                     Refer to `Shortcut.filter`.
                   schema:
                     type: string
                 - name: showDeleted
@@ -679,7 +693,9 @@ paths:
             parameters:
                 - name: memoId
                   in: query
-                  description: "Optional. The memo ID to use for this memo.\r\n If empty, a unique ID will be generated."
+                  description: |-
+                    Optional. The memo ID to use for this memo.
+                     If empty, a unique ID will be generated.
                   schema:
                     type: string
                 - name: validateOnly
@@ -726,7 +742,9 @@ paths:
                     type: string
                 - name: readMask
                   in: query
-                  description: "Optional. The fields to return in the response.\r\n If not specified, all fields are returned."
+                  description: |-
+                    Optional. The fields to return in the response.
+                     If not specified, all fields are returned.
                   schema:
                     type: string
                     format: field-mask
@@ -2777,7 +2795,9 @@ components:
                     description: The list of memos.
                 nextPageToken:
                     type: string
-                    description: "A token that can be sent as `page_token` to retrieve the next page.\r\n If this field is omitted, there are no subsequent pages."
+                    description: |-
+                        A token that can be sent as `page_token` to retrieve the next page.
+                         If this field is omitted, there are no subsequent pages.
                 totalSize:
                     type: integer
                     description: The total count of memos (may be approximate).
@@ -2889,7 +2909,9 @@ components:
             properties:
                 name:
                     type: string
-                    description: "The resource name of the memo.\r\n Format: memos/{memo}, memo is the user defined id or uuid."
+                    description: |-
+                        The resource name of the memo.
+                         Format: memos/{memo}, memo is the user defined id or uuid.
                 state:
                     enum:
                         - STATE_UNSPECIFIED
@@ -2901,7 +2923,9 @@ components:
                 creator:
                     readOnly: true
                     type: string
-                    description: "The name of the creator.\r\n Format: users/{user}"
+                    description: |-
+                        The name of the creator.
+                         Format: users/{user}
                 createTime:
                     readOnly: true
                     type: string
@@ -2967,7 +2991,9 @@ components:
                 parent:
                     readOnly: true
                     type: string
-                    description: "Output only. The name of the parent memo.\r\n Format: memos/{memo}"
+                    description: |-
+                        Output only. The name of the parent memo.
+                         Format: memos/{memo}
                 snippet:
                     readOnly: true
                     type: string
@@ -3005,7 +3031,9 @@ components:
             properties:
                 name:
                     type: string
-                    description: "The resource name of the memo.\r\n Format: memos/{memo}"
+                    description: |-
+                        The resource name of the memo.
+                         Format: memos/{memo}
                 snippet:
                     readOnly: true
                     type: string
@@ -3191,14 +3219,21 @@ components:
                 name:
                     readOnly: true
                     type: string
-                    description: "The resource name of the reaction.\r\n Format: reactions/{reaction}"
+                    description: |-
+                        The resource name of the reaction.
+                         Format: reactions/{reaction}
                 creator:
                     readOnly: true
                     type: string
-                    description: "The resource name of the creator.\r\n Format: users/{user}"
+                    description: |-
+                        The resource name of the creator.
+                         Format: users/{user}
                 contentId:
                     type: string
-                    description: "The resource name of the content.\r\n For memo reactions, this should be the memo's resource name.\r\n Format: memos/{memo}"
+                    description: |-
+                        The resource name of the content.
+                         For memo reactions, this should be the memo's resource name.
+                         Format: memos/{memo}
                 reactionType:
                     type: string
                     description: "Required. The type of reaction (e.g., \"\U0001F44D\", \"❤️\", \"\U0001F604\")."
@@ -3225,7 +3260,9 @@ components:
             properties:
                 parent:
                     type: string
-                    description: "Required. The parent, who owns the tags.\r\n Format: memos/{memo}. Use \"memos/-\" to rename all tags."
+                    description: |-
+                        Required. The parent, who owns the tags.
+                         Format: memos/{memo}. Use "memos/-" to rename all tags.
                 oldTag:
                     type: string
                     description: Required. The old tag name to rename.
@@ -3271,7 +3308,9 @@ components:
             properties:
                 name:
                     type: string
-                    description: "Required. The resource name of the memo.\r\n Format: memos/{memo}"
+                    description: |-
+                        Required. The resource name of the memo.
+                         Format: memos/{memo}
                 attachments:
                     type: array
                     items:
@@ -3285,7 +3324,9 @@ components:
             properties:
                 name:
                     type: string
-                    description: "Required. The resource name of the memo.\r\n Format: memos/{memo}"
+                    description: |-
+                        Required. The resource name of the memo.
+                         Format: memos/{memo}
                 relations:
                     type: array
                     items:
@@ -3425,7 +3466,9 @@ components:
             properties:
                 name:
                     type: string
-                    description: "Required. The resource name of the memo.\r\n Format: memos/{memo}"
+                    description: |-
+                        Required. The resource name of the memo.
+                         Format: memos/{memo}
                 reaction:
                     allOf:
                         - $ref: '#/components/schemas/Reaction'
@@ -3488,6 +3531,9 @@ components:
                     type: string
                     description: Output only. The last update timestamp.
                     format: date-time
+                memoVisibility:
+                    type: string
+                    description: Optional. The default visibility of the memo.
         UserAccessToken:
             type: object
             properties:
@@ -3669,7 +3715,9 @@ components:
             properties:
                 theme:
                     type: string
-                    description: "theme is the name of the selected theme.\r\n This references a CSS file in the web/public/themes/ directory."
+                    description: |-
+                        theme is the name of the selected theme.
+                         This references a CSS file in the web/public/themes/ directory.
                 disallowUserRegistration:
                     type: boolean
                     description: disallow_user_registration disallows user registration.
@@ -3688,7 +3736,10 @@ components:
                     description: custom_profile is the custom profile.
                 weekStartDayOffset:
                     type: integer
-                    description: "week_start_day_offset is the week start day offset from Sunday.\r\n 0: Sunday, 1: Monday, 2: Tuesday, 3: Wednesday, 4: Thursday, 5: Friday, 6: Saturday\r\n Default is Sunday."
+                    description: |-
+                        week_start_day_offset is the week start day offset from Sunday.
+                         0: Sunday, 1: Monday, 2: Tuesday, 3: Wednesday, 4: Thursday, 5: Friday, 6: Saturday
+                         Default is Sunday.
                     format: int32
                 disallowChangeUsername:
                     type: boolean
@@ -3739,7 +3790,9 @@ components:
             properties:
                 owner:
                     type: string
-                    description: "The name of instance owner.\r\n Format: users/{user}"
+                    description: |-
+                        The name of instance owner.
+                         Format: users/{user}
                 version:
                     type: string
                     description: Version is the current version of instance.
@@ -3755,7 +3808,9 @@ components:
             properties:
                 name:
                     type: string
-                    description: "The name of the workspace setting.\r\n Format: workspace/settings/{setting}"
+                    description: |-
+                        The name of the workspace setting.
+                         Format: workspace/settings/{setting}
                 generalSetting:
                     $ref: '#/components/schemas/WorkspaceGeneralSetting'
                 storageSetting:
@@ -3777,7 +3832,9 @@ components:
                     format: enum
                 filepathTemplate:
                     type: string
-                    description: "The template of file path.\r\n e.g. assets/{timestamp}_{filename}"
+                    description: |-
+                        The template of file path.
+                         e.g. assets/{timestamp}_{filename}
                 uploadSizeLimitMb:
                     type: string
                     description: The max upload size in megabytes.
